packages/jsii/test/negatives/neg.internal-underscore-class.5.ts
export class MyClass {
  /** @internal */
  public propertyWithInternalButNotUnderscorePrefix?: string;
}
